# cityhash-rust

./: Cargo.toml  README.md
src/: lib.rs  test.rs  test_128.rs
